--- a/src/component/app/app.scss
+++ b/src/component/app/app.scss
@@ -9,13 +9,14 @@
     width: 1200px;
     display: grid;
     grid-template-columns: 2fr 10fr;
-    grid-template-rows: 60px 1fr;
+    grid-template-rows: 60px minmax(calc(100vh - 60px - 10px), 100%);
     grid-gap: 10px;
     grid-template-areas:
     "header header header"
     "nav content content";
 }
 .app-wrapper-content{
+    //height: 100vh;
     grid-area: content;
     background-color: green;
 }
