--- a/src/component/header/header.module.scss
+++ b/src/component/header/header.module.scss
@@ -6,3 +6,11 @@
         height: 60px;
     }
 }
+
+.loginBlock{
+    float: right;
+    a {
+        text-decoration: none;
+        color: white;
+    }
+}
