--- a/src/component/app/app.scss
+++ b/src/component/app/app.scss
@@ -13,7 +13,7 @@
     grid-gap: 10px;
     grid-template-areas:
     "header header header"
-    "nav content content";
+    " content content nav";
 }
 .app-wrapper-content{
     //height: 100vh;
