--- a/src/component/app/app.scss
+++ b/src/component/app/app.scss
@@ -1,24 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400&display=swap');
 *{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Bebas Neue', cursive;
     padding: 0;
     margin: 0;
 }
 .app{
     margin: 0 auto;
-    width: 1200px;
+    width: 100%;
     display: grid;
     grid-template-columns: 2fr 10fr;
-    grid-template-rows: 60px minmax(calc(100vh - 60px - 10px), 100%);
-    grid-gap: 10px;
+    grid-template-rows: 100px minmax(calc(100vh - 100px), 100%);
     grid-template-areas:
     "header header header"
-    " content content nav";
+    "content content nav";
 }
 .app-wrapper-content{
     //height: 100vh;
     grid-area: content;
-    background-color: green;
+    background-color: #e1e1e1;
 }
 
 
