--- a/src/component/app/app.scss
+++ b/src/component/app/app.scss
@@ -1,18 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400&family=Titillium+Web:wght@300&display=swap');
 *{
     font-family: 'Bebas Neue', cursive;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 .app{
-    margin: 0 auto;
     width: 100%;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 2fr 10fr;
     grid-template-rows: 100px minmax(calc(100vh - 100px), 100%);
     grid-template-areas:
     "header header header"
     "content content nav";
+}
+._container{
+    width: 1366px;
+    margin: 0 auto;
 }
 .app-wrapper-content{
     //height: 100vh;
