--- a/src/component/users/users.module.scss
+++ b/src/component/users/users.module.scss
@@ -1,7 +1,8 @@
 .users{
   display: flex;
   margin: 0 auto;
-  width: 962px;
+  width: 800px;
   background-color: #fff;
   padding-top: 40px;
+  justify-content: center;
 }
