--- a/src/component/dialogs/message/message.module.scss
+++ b/src/component/dialogs/message/message.module.scss
@@ -1,3 +1,22 @@
 .message{
+  display: flex;
+  align-items: center;
+  width: 400px;
+  flex-direction: row;
+}
 
+.text{
+  max-width: 400px;
+  padding: 23px 31px;
+  background-color: #fefdfd;
+}
+
+.photo {
+  display: inline;
+  margin-right: 18px;
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
 }
