--- a/src/component/nav/nav.module.scss
+++ b/src/component/nav/nav.module.scss
@@ -1,20 +1,79 @@
 .navbar {
-    background-color: yellow;
-    grid-area: nav;    
+    background: url("./sidebarBg.png");
+    grid-area: nav;
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
 }
-.items{
-    margin: 20px 0 0 30px;
-}
-.item{
-    font-size: 18px;
-    margin: 10px;
-    a{
-        text-decoration: none;
-        &.active {
-            color: green;
+
+.user{
+    margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .photo{
+        margin: 0 auto;
+        img{
+            width: 150px;
+            height: 150px;
+            border-radius: 100%;
         }
     }
-    &:last-child {
-        margin-top: 20px;
+    .name{
+        margin-top: 15px;
+        text-align: center;
+        font-size: 36px;
+        line-height: 1.2;
+        font-weight: 400;
+        color: #ffffff;
+    }
+    .button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        text-decoration: none;
+        margin: 20px auto;
+        width: 200px;
+        height: 50px;
+        border-radius: 25px;
+        a{
+            text-decoration: none;
+            font-size: 25px;
+            line-height: 1.2;
+            font-weight: 400;
+            color: #800000;
+        }
+    }
+    .email{
+        text-align: center;
+        font-size: 12px;
+        line-height: 1.2;
+        font-weight: 300;
+        color: #ffffff;
     }
 }
+
+
+.interesting{
+    margin: 0 auto;
+    width: 225px;
+    height: 200px;
+    .title{
+        font-size: 16px;
+        line-height: 1.2;
+        font-weight: 400;
+        color: #ffffff;
+    }
+    .content{
+        width: 100%;
+        height: 100%;
+        opacity: 0.7;
+        background-color: #ffffff;
+        border-radius: 10px;
+    }
+
+}
+
+
+
