--- a/src/component/users/paginator/paginator.module.scss
+++ b/src/component/users/paginator/paginator.module.scss
@@ -1,5 +1,7 @@
 
 .paginator {
+  display: flex;
+  justify-content: center;
   user-select: none;
   margin: 10px;
 }
@@ -10,4 +12,19 @@
 
 .pageNumber.selectedPage {
   font-weight: bold;
+}
+
+.navBtn{
+  width: 27px;
+  height: 27px;
+  img{
+    width: 100%;
+    height: 100%;
+  }
+}
+.right{
+  margin-left: 10px;
+}
+.left{
+  margin-right: 10px;
 }
