--- a/src/component/nav/nav.module.scss
+++ b/src/component/nav/nav.module.scss
@@ -54,7 +54,6 @@
     }
 }
 
-
 .interesting{
     margin: 0 auto;
     width: 225px;
@@ -75,5 +74,12 @@
 
 }
 
+
+.chatContainer {
+    padding: 10px;
+    height: 600px;
+    margin: 0 auto;
+    justify-content: center;
+}
 
 
