--- a/src/component/dialogs/dialogs.module.scss
+++ b/src/component/dialogs/dialogs.module.scss
@@ -1,24 +1,31 @@
 .dialogs{
-  position: relative;
+  height: 100%;
   width: 880px;
   display: grid;
-  height: 100%;
-  padding-top: 50px;
+  padding-top: 20px;
   margin: 0 auto;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 300px 600px;
+  grid-template-rows: 640px;
 }
+
 .dialogsItems{
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding: 17px;
   background-color: #fff;
 }
 
 .messagesContainer{
-  overflow: auto;
+  display: grid;
+  grid-template-rows: 580px 60px;
   background-color: transparent;
 }
+
 .messages{
+  overflow-y: auto;
   padding: 17px 50px;
-  background-color: #e1e1e1;
   display: flex;
   flex-direction: column;
 }
