--- a/src/component/users/users.module.scss
+++ b/src/component/users/users.module.scss
@@ -1,7 +1,13 @@
+.container{
+  padding: 20px 0;
+  height: 100%;
+}
+
 .users {
+  border-radius: 25px;
   height: 100%;
   margin: 0 auto;
-  width: 800px;
+  width: 880px;
   background-color: #fff;
   padding-top: 25px;
   justify-content: center;
