--- a/src/component/app/app.scss
+++ b/src/component/app/app.scss
@@ -1,11 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400&family=Titillium+Web:wght@300&display=swap');
+html {
+    overflow-y: scroll;
+}
+
 *{
     font-family: 'Bebas Neue', cursive;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    ::-webkit-scrollbar {
+        width: 10px;
+        background-color: #f9f9fd;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: #800000;
+    }
+
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+        background-color: #f9f9fd;
+    }
+
 }
 .app{
+
     margin: 0 auto;
     display: grid;
     grid-template-rows:100px minmax(calc(100vh - 100px), 100%);
@@ -13,6 +33,7 @@
     grid-template-areas:
     "header header header"
     "content content nav";
+
 }
 ._container{
     width: 1366px;
