--- a/src/component/profile/profile.module.scss
+++ b/src/component/profile/profile.module.scss
@@ -1,5 +1,14 @@
-.profile {
+.wrapper{
+  height: 100%;
+  padding: 20px 0;
+}
 
+.profile {
+  border-radius: 25px;
+  height: 100%;
+  background-color: #fff;
+  width: 880px;
   padding: 30px 100px;
+  margin: 0 auto;
 }
 
