--- a/src/component/app/app.scss
+++ b/src/component/app/app.scss
@@ -4,7 +4,7 @@ html {
 }
 
 *{
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
