--- a/src/component/dialogs/dialogItem/dialog.module.scss
+++ b/src/component/dialogs/dialogItem/dialog.module.scss
@@ -4,12 +4,16 @@
   width: 100%;
   margin-top: 36px;
   position: relative;
+  padding: 10px;
+  border-radius: 10px;
   &:first-child {
     margin-top: 0;
   }
   &.active {
+    background-color: rgba( #800000, .1);
     &::before{
-      left: -12px;
+      border-radius: 5px;
+      left: -19px;
       position: absolute;
       content: '';
       height: 100%;
@@ -18,7 +22,6 @@
     }
   }
   text-decoration: none;
-
 }
 
 .name {
@@ -30,8 +33,8 @@
 }
 
 .photo {
-  width: 75px;
-  height: 75px;
+  width: 65px;
+  height: 65px;
 
   img {
     width: 100%;
