--- a/src/component/dialogs/message/message.module.scss
+++ b/src/component/dialogs/message/message.module.scss
@@ -1,4 +1,5 @@
 .message{
+  background-color: rgba(255,255,255, .8);
   width: 500px;
   margin-top: 20px;
   display: flex;
@@ -8,10 +9,14 @@
 
 }
 .own{
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
   flex-direction: row-reverse;
 }
 .noOwn{
   flex-direction: row;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .text{
