--- a/src/component/profile/profileInfo/profileInfo.module.scss
+++ b/src/component/profile/profileInfo/profileInfo.module.scss
@@ -1,13 +1,87 @@
-.description{
-  gap: 100px;
-  padding: 10px;
+.info{
+  gap: 35px;
   display: grid;
   grid-template-columns: 200px 600px;
+}
+
+.leftSide{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .profilePhoto{
   width: 200px;
   height: 200px;
+  img{
+    height: 100%;
+    border-radius: 50%;
+  }
 }
-.contacts{
+.upload{
+  display: none;
+}
+.follow{
+  margin-top: 15px;
+  border: none;
+  width: 150px;
+  height: 40px;
+  background-color: #800000;
+  border-radius: 30px;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+
+.rightSide{
+  position: relative;
+  padding: 20px 0;
+}
+
+.profileData{
+
+}
+
+.name{
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 0.9;
+}
+
+.aboutMe{
+  margin-top: 8px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 400;
+}
+
+.status{
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.social{
+  margin-top: 15px;
+  span{
+    margin-bottom: 10px;
+    display: block;
+    border-bottom: 1px solid #000000;
+  }
+}
+
+.contact{
+  margin-top: 10px;
   padding-left: 10px;
+}
+
+.edit{
+  right: 0;
+  top: 0;
+  position: absolute;
+}
+
+.input{
+
+
 }
