--- a/src/component/profile/profileInfo/profileInfo.module.scss
+++ b/src/component/profile/profileInfo/profileInfo.module.scss
@@ -5,9 +5,15 @@
 }
 
 .leftSide{
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  &:hover{
+    .upload{
+      display: block;
+    }
+  }
 }
 .profilePhoto{
   width: 200px;
@@ -19,6 +25,16 @@
 }
 .upload{
   display: none;
+  position: absolute;
+  top: -10px;
+  right: 0;
+  label{
+    img{
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+    }
+  }
 }
 .follow{
   margin-top: 15px;
