--- a/src/component/chat/chatPage.module.scss
+++ b/src/component/chat/chatPage.module.scss
@@ -8,17 +8,19 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  overflow: auto;
+  //overflow: auto;
 }
 
 .message{
+  margin-bottom: 10px;
   display: flex;
   align-items: center;
 }
 
 .photo {
-  width: 20px;
-  height: 20px;
+  margin-right: 15px;
+  width: 30px;
+  height: 30px;
   img {
     width: 100%;
   }
