--- a/src/component/nav/nav.module.scss
+++ b/src/component/nav/nav.module.scss
@@ -1,9 +1,13 @@
 .navbar {
-    background: url("./sidebarBg.png");
+    background: #e1e1e1;
     grid-area: nav;
     display: flex;
     flex-direction: column;
     z-index: 10;
+
+    -webkit-box-shadow: -21px 0px 19px -17px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: -21px 0px 19px -17px rgba(0, 0, 0, 0.2);
+    box-shadow: -21px 0px 19px -17px rgba(0, 0, 0, 0.2);
 }
 
 .user{
@@ -25,7 +29,7 @@
         font-size: 36px;
         line-height: 1.2;
         font-weight: 400;
-        color: #ffffff;
+        color: #000;
     }
     .button{
         display: flex;
@@ -62,7 +66,7 @@
         font-size: 16px;
         line-height: 1.2;
         font-weight: 400;
-        color: #ffffff;
+        color: #000;
     }
     .content{
         width: 100%;
